# strip-slice-prefix

./: Cargo.toml  README.md
src/: lib.rs
